# detexify-rust

./: Cargo.toml  README.md
detexify/: Cargo.toml  README.md  build.rs
detexify-c/: Cargo.toml  README.md  build.rs
detexify-c/src/: lib.rs
detexify-server/: Cargo.toml  README.md
detexify-server/src/: main.rs
detexify/src/: classifier.rs  dtw.rs  json.rs  lib.rs  point.rs  rect.rs  sim.rs  stokes.rs  stroke.rs  stroke_sample.rs  symbol.rs
