[package]
name = "detexify-c"
version = "0.4.0"
authors = ["Zoey Sheffield <me@zoey.fyi>"]
edition = "2018"
readme = "README.md"
description = "Rust port of the [detexify backend](https://github.com/kirel/detexify-hs-backend)."
license = "MIT"
homepage = "https://github.com/zoeyfyi/detexify-rust/"
repository = "https://github.com/zoeyfyi/detexify-rust/"
keywords = ["tex", "latex", "classifier"]
categories = ["computer-vision"]
build = "build.rs"

[dependencies]
detexify = { version = "0.4.0", path = "../detexify" }

[build-dependencies]
cbindgen = "0.18.0"

[lib]
name = "detexify"
crate-type = ["cdylib"]