[package]
name = "detexify-server"
version = "0.1.0"
authors = ["Ben Sheffield <me@mrbenshef.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detexify = { path = "../detexify" }
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"