[package]
name = "detexify-server"
version = "0.2.0"
authors = ["Ben Sheffield <me@mrbenshef.co.uk>"]
edition = "2018"
readme = "README.md"
description = "Rust port of the [detexify backend](https://github.com/kirel/detexify-hs-backend)."
license = "MIT"
homepage = "https://github.com/mrbenshef/detexify-rust/"
repository = "https://github.com/mrbenshef/detexify-rust/"
keywords = ["tex", "latex", "classifier"]
categories = ["computer-vision", "web-programming::http-server"]

[dependencies]
detexify = { version = "0.2.0", path = "../detexify" }
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"