[package]
name = "detexify"
version = "0.1.0"
authors = ["Ben Sheffield <me@mrbenshef.co.uk>"]
edition = "2018"
readme = "README.md"
description = "The `detexify` crate is a port of the classifier that powers https://detexify.kirelabs.org/classify.html."
license = "MIT"
homepage = "https://github.com/mrbenshef/detexify-rust/"
repository = "https://github.com/mrbenshef/detexify-rust/"
keywords = ["tex", "latex", "classifier"]
categories = ["computer-vision"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
itertools = "0.9.0"
tuple = "0.4.2"